maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:2: error: Missing closing brace `}' assumed here
def toutMarque():Boolean = {
^ShortestPathMaze:2: error: expected class or object definition
def toutMarque():Boolean = {
^ShortestPathMaze:18: error: expected class or object definition
def dirMinimale(x,y):Direction {
^ShortestPathMaze:32: error: expected class or object definition
def marquerAutour(x:Int,y:Int,indice:Int) {
^ShortestPathMaze:40: error: expected start of definition
override def run() {
         ^